facet-args/src/schema/snapshots/facet_args__schema__tests__snapshot_schema_counted_on_non_integer.snap
---
source: facet-args/src/schema/tests.rs
expression: stripped
---
Error: field `value` marked as counted must be an integer
   ╭─[ <unknown>:4:5 ]
   │
 2 │ struct CountedOnNonInteger {
   │        ─────────┬─────────  
   │                 ╰─────────── defined at facet-args/src/schema/tests.rs:95
   │ 
 4 │     value: bool,
   │     ─────┬─────  
   │          ╰─────── field `value` marked as counted must be an integer
 5 │ }
   │ ┬  
   │ ╰── end of definition
───╯
